--- a/Projects/workOnLessons/styles/theme/button.less
+++ b/Projects/workOnLessons/styles/theme/button.less
@@ -1,7 +1,5 @@
 @import './variables.less';
 
-
-
 button {
     width        : 100px;
     height       : 30px;
@@ -22,11 +20,11 @@ button {
     }
 }
 
-button.btn-secondary {
+&.btn-secondary {
     background-color: rgb(231, 231, 231);
     color           : #000;
 }
 
-button.btn-secondary:hover {
+&.btn-secondary:hover {
     background-color: rgb(185, 185, 185);
 }
