--- a/siteForGraduate/styles/index.css
+++ b/siteForGraduate/styles/index.css
@@ -4,6 +4,11 @@ html, body {
     overflow-x: hidden;
 }
 
+:root {
+    /* Theme colod*/
+    --text-gray: #3f4954;
+}
+
 a {
     text-decoration: none;
 }
@@ -32,7 +37,6 @@ ul {
 }
 
 .nav .nav-items {
-    list-style-type: none;
     display: flex;
     margin: 0;
 }
@@ -43,12 +47,24 @@ ul {
     position: relative;
 }
 
+.nav .nav-items .nav-link:hover a {
+    color: black;
+}
+
 .nav .nav-brand a {
-    font-size: 1.6rem;
+    font-size: 1.6rem 1rem;
     padding: 1rem 0;
     display: block;
 
 }
-.nav .social{
+
+.nav .social {
     padding: 1.4rem 0;
+}
+
+/* Viewport less */
+@media only screen and(max-width:750px) {
+    .nav .nav-menu {
+        flex-direction: column;
+    }
 }
