--- a/siteForGraduate/styles/index.css
+++ b/siteForGraduate/styles/index.css
@@ -2,15 +2,29 @@ html, body {
     margin: 0%;
     box-sizing: border-box;
     overflow-x: hidden;
+       
 }
 
 :root {
     /* Theme colod*/
     --text-gray: #3f4954;
+    --text-light: #686666ba;
+    --bg-color: #0f0f0f0f;
+    --white: #ffffff;
+    --midnight: #104f55;
+
+    /* gradient color*/
+    --sky: liner-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+
+}
+.container{
+    display:grid;
+    
 }
 
 a {
     text-decoration: none;
+    color: var(--text-gray);
 }
 
 .flex-row {
@@ -27,13 +41,32 @@ ul {
 .nav {
     background: white;
     padding: 0 2rem;
-    height: 0px;
-    min-height: 40rem;
+    height: 0rem;
+    min-height: 100vh;
     overflow: hidden;
 }
 
 .nav .nav-menu {
     justify-content: space-between;
+}
+
+.nav .toggle-collapse {
+    position: absolute;
+    top: 0%;
+    width: 90%;
+    cursor: pointer;
+    display: none;
+}
+
+.nav .toggle-collapse .toggle-icons {
+    display: flex;
+    justify-content: flex-end;
+    padding: 1.6rem 0;
+}
+
+.nav .toggle-collapse .toggle-icons i {
+    font-size: 1.4rem;
+    color: var(--text-gray);
 }
 
 .nav .nav-items {
@@ -45,16 +78,24 @@ ul {
     padding: 1.6rem 1rem;
     font-size: 1rem;
     position: relative;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.1rem;
+}
+
+.nav .nav-items .nav-link:hover {
+    background-color: var(--midnight);
 }
 
 .nav .nav-items .nav-link:hover a {
-    color: black;
+    color: var(--white);
 }
 
 .nav .nav-brand a {
-    font-size: 1.6rem 1rem;
+    font-size: 1.4rem 1rem;
     padding: 1rem 0;
     display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.4rem;
 
 }
 
@@ -62,9 +103,21 @@ ul {
     padding: 1.4rem 0;
 }
 
+.nav .social i {
+    padding: 0.2rem;
+}
+
+.nav .social i:hover {
+    color: rgb(138, 145, 145)
+}
+
 /* Viewport less */
-@media only screen and(max-width:750px) {
-    .nav .nav-menu {
+@media only screen and (max-width:750px) {
+    .nav .nav-menu, .nav .nav-items {
         flex-direction: column;
+    }
+
+    .nav .toggle-collapse {
+        display: initial;
     }
 }
