--- a/siteForGraduate/styles/index.css
+++ b/siteForGraduate/styles/index.css
@@ -1,9 +1,32 @@
-html, body {
+* {
+    padding: 0;
     margin: 0%;
     box-sizing: border-box;
-    overflow-x: hidden;
+
        
 }
+/*Preloader*/
+.loader{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgb(153, 143, 143);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.disppear{
+    animation: varnish 0.2s forwards;
+}
+@keyframes varnish{
+    100%{
+        opacity: 0;
+        visibility: hiden;
+    }
+}
+/*EndPreloader*/
 
 :root {
     /* Theme colod*/
@@ -17,107 +40,121 @@ html, body {
     --sky: liner-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
 
 }
-.container{
-    display:grid;
-    
+header{
+    background-color: #3f4954;
 }
-
 a {
     text-decoration: none;
     color: var(--text-gray);
 }
-
-.flex-row {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-ul {
+li {
     list-style-type: none;
 }
 
 /*---NavBar--*/
+
 .nav {
+    display: flex;
     background: white;
     padding: 0 2rem;
     height: 0rem;
     min-height: 100vh;
     overflow: hidden;
-}
-
-.nav .nav-menu {
     justify-content: space-between;
 }
-
-.nav .toggle-collapse {
-    position: absolute;
-    top: 0%;
-    width: 90%;
-    cursor: pointer;
-    display: none;
-}
-
-.nav .toggle-collapse .toggle-icons {
-    display: flex;
-    justify-content: flex-end;
-    padding: 1.6rem 0;
-}
-
-.nav .toggle-collapse .toggle-icons i {
-    font-size: 1.4rem;
-    color: var(--text-gray);
-}
-
-.nav .nav-items {
-    display: flex;
-    margin: 0;
-}
-
-.nav .nav-items .nav-link {
-    padding: 1.6rem 1rem;
-    font-size: 1rem;
-    position: relative;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.1rem;
-}
-
-.nav .nav-items .nav-link:hover {
-    background-color: var(--midnight);
-}
-
-.nav .nav-items .nav-link:hover a {
-    color: var(--white);
-}
-
-.nav .nav-brand a {
+.nav .nav-brand {
     font-size: 1.4rem 1rem;
     padding: 1rem 0;
     display: block;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.4rem;
-
+}
+.nav .nav-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    margin: 0;
 }
 
-.nav .social {
-    padding: 1.4rem 0;
+
+.nav-link {
+    padding: 1.6rem 1rem;
+    font-size: 1rem;
+    position: relative;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.1rem;
+    transition: 0.6s ease;
 }
 
-.nav .social i {
+.nav-link:hover {
+    background-color: var(--text-gray);
+}
+
+ .nav-link:hover a {
+    color: var(--midnight);
+}
+
+.nav .social i{
+    padding: 1.4rem 0.2rem;
+    font-size: 1.2rem;
+}
+
+/* .nav .social i {
     padding: 0.2rem;
-}
+} */
 
 .nav .social i:hover {
     color: rgb(138, 145, 145)
 }
+/*Properties for Hamburger*/  
+.hamburger{
+    display: none;
+    cursor: pointer;
+}
+.bar{
+    display: block;
+    width: 25px;
+    height: 2px;
+    margin: 5px;
+    -webkit-transition: all 0.3 ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: aliceblue;
+}
+   
 
 /* Viewport less */
 @media only screen and (max-width:750px) {
-    .nav .nav-menu, .nav .nav-items {
+    
+    .humburger{
+        display: block;
+    }
+    .humburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    .humburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .humburger.active .bar:nth-child(1){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+    .nav-menu{
+        position: fixed;
+        left: -100%;
+        gap: 0;
         flex-direction: column;
+        background-color: #010303;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
     }
-
-    .nav .toggle-collapse {
-        display: initial;
+    .nav-item{
+        margin: 16px 0;
     }
+    .nav-menu.active{
+        left: 0;
+    }
+    
+      
+     
 }
